--- a/datasciencecousera1.Rmd
+++ b/datasciencecousera1.Rmd
@@ -3,8 +3,10 @@ title: "HelloWorld.md"
 author: "YOU!"
 date: "8/25/2020"
 output:
-  word_document: default
+  html_document:
+    df_print: paged
   pdf_document: default
+  word_document: default
 ---
 
 ```{r setup, include=FALSE}
